# trait-match

./: Cargo.toml
examples/: sealed-trait.rs
src/: lib.rs
trait-match-proc-macro/: Cargo.toml
trait-match-proc-macro/src/: lib.rs
type-match-proc-macro/: Cargo.toml
type-match-proc-macro/src/: lib.rs
