[package]
name = "trait-match"
version = "0.1.0"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait-match-proc-macro = { path = "./trait-match-proc-macro" }

[[example]]
name = "sealed-trait"

[workspace]
members = ["trait-match-proc-macro"]
