[package]
name = "trait-match"
version = "0.1.0"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
repository = "https://github.com/green-narofsky/trait-match.git"
license = "AGPL-3.0-or-later"
description = "Matching on traits!"
documentation = "https://docs.rs/trait-match"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait-match-proc-macro = { path = "./trait-match-proc-macro" }

[[example]]
name = "sealed-trait"

[workspace]
members = ["trait-match-proc-macro"]
