[package]
name = "trait-match-proc-macro"
version = "0.1.0"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
